manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-application-namespace
  name: main-application-dep
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: main-application
  template:
    metadata:
      labels:
        app: main-application
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: main-application-claim
        - name: config
          configMap:
            name: main-application-configmap
      containers:
        - name: main-application-hash
          image: nanyangcn/main-application-hash
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
          - name: config
            mountPath: /usr/src/app/config
        - name: main-application-timestamp
          image: nanyangcn/main-application-timestamp
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
