manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application-namespace
  name: main-application-svc
spec:
  type: ClusterIP
  selector:
    app: main-application 
  ports:
    - protocol: TCP
      port: 2346 
      targetPort: 3001
