manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-application-ing
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: main-application-svc
            port: 
              number: 2346
      - pathType: Prefix 
        path: /pingpong
        backend:
          service: 
            name: ping-pong-application-svc
            port: 
              number: 2347
